# MV54

./: .gitignore  path.blend  path.blend1
TP AR/RA_project/: pose_helper.h  unityInterface.cpp
TP AR/TP1/RA_project/: CMakeLists.txt  main.cpp  pose_helper.cpp  unityInterface.h
TP AR/TP2/AR_Engine/AR_Engine_Data/: app.info  globalgamemanagers  globalgamemanagers.assets  level0  resources.assets  resources.assets.resS  sharedassets0.assets
TP AR/TP2/RA_project/: main.cpp
TP Blender/: jouet.cmo
TP Unity/TP1/: .gitignore  Assembly-CSharp.csproj
TP Unity/TP1/Assets/Actions/: Player.inputactions
TP Unity/TP1/Assets/Animations/: Door.controller  OpenDoor.anim
TP Unity/TP1/Assets/Materials/: Metal.mat  Wood.mat  circuit.mat
TP Unity/TP1/Assets/Models/: teapot_with_maps.FBX
TP Unity/TP1/Assets/Prefabs/: Cube.prefab  Door.prefab
TP Unity/TP1/Assets/Scenes/: SampleScene.unity
TP Unity/TP1/Assets/Scripts/: CubeBehavior.cs  Door.cs  Player.cs
TP Unity/TP1/ProjectSettings/: ProjectSettings.asset
TP Unity/TP3/Assets/: Actions.inputactions
TP Unity/TP3/Assets/Materials/: portal_ceiling.mat  portal_floor 1.mat  portal_floor 2.mat  portal_floor.mat  portal_wall.mat
TP Unity/TP3/Assets/Oculus Controllers/: InputsBehavior.cs
TP Unity/TP3/Assets/Prefabs/: CompanionCube.prefab  Cube.prefab  button.fbx
TP Unity/TP3/Assets/Prefabs/Materials/: 45801d2e.dds.mat  (+26 more)
TP Unity/TP3/Assets/Scenes/: SampleScene.unity
TP Unity/TP3/Assets/Textures/: Thumbs.db
TP Unity/TP3/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset
(+8 files in other folders)
